Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Current SVN

    Bugs fixed:

      - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
        from and to objects are the same.

  1.4.2

    Features added

      - Disabled Kupu spell checker, there was a problem that could make Zope
        get into a spin.

    Bugs fixed

      - Added missing 'is_default' method on SilvaObject, it was already
        available on Content but some new functionality (closing objects
        from tab_edit of Container types) made that it was required for
        other types as well.

      - Kupu now uses frontend.css instead of an almost entire copy.

      - Moved 'get_extsource_url.py' out of SilvaDocument to the core to
        allow using it from other products.

  1.4.1

    Bugs fixed

      - Added support for Kupu 1.3.2, in which a SilvaExternalSources related
        bug is fixed.

      - Fixed unicode bug in table rendering.

  1.4

    Features added

      - Added a JavaScript registry for onload handlers and used that to
        do some refactoring of the tab_edit pagetemplates.

      - Added support for Kupu 1.3.

      - Added a field to the silva-extra metadata-set: hide_from_toc. 
        By default set to do not hide, when this is set to hide on a piece
        of content, that content (and what it contains) will not show up in
        tables of content.

      - Added a link_type attribute to Link (Version) objects. Adding 
        relative links is now possible.

      - Browsing to objects (for e.g. link and image lookups) has been 
        refactored, now there's only a single implementation of the lookup
        window, and somewhat cleaner HTML.

      - It is now possible to have table cells without a width attribute,
        which means you can style your tables through css entirely. To use
        this feature, give the column widths a value of '*'.

    Bugs Fixed
