@@ -10,6 +10,9 @@ Silva changes
       - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
         from and to objects are the same.
 
+      - Fixed bug in XML export (to_xml()) of Link objects, escaping 
+        (entitizing) title and url properly now.
+
   1.4.2
 
     Features added
